# jake_the_dog

./: :  Cargo.toml  README.md  data_type_guide.md  docker-compose.yml  docker_postgres_init.sql  test.sql
src/: db.rs  main.rs  routes.rs
src/action_handler/: create_new_product.rs  db_test.rs  delete_product_by_id.rs  get_all_products.rs  get_product_by_id.rs  mod.rs  update_product.rs
src/action_handler2/: create_new_product.rs  db_test.rs  get_all_products.rs  mod.rs  update_product.rs
src/data_types/structs/: mod.rs
src/data_types/traits/: mod.rs
src/routes/: mod.rs  route_structs.rs
