[package]
name = "jake_the_dog"
version = "1.0.0"
edition = "2021"
authors = ["Harrison Hemstreet"]
description = "jake_the_dog is a skeleton project that you can use to start a basic webserver using Rust and PostgreSQL"
repository = "https://github.com/HarrisonHemstreet/jake_the_dog"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
dotenv = "0.15.0"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
tokio = {version = "1.27.0", features = ["full"]}
tokio-postgres = {version = "0.7.8", features = ["with-uuid-1"]}
uuid = {version = "1.3.1", features = ["serde"]}
postgres-types = { version = "0.2.5", features = ["derive"]}
better_todos = "1.1.0"
